@@ -6,9 +6,9 @@ More testing would clearly be helpful.
 NT_X64_STATIC_THREADS_MAKEFILE has been used in
 this environment.  Copy this file to MAKEFILE, and then type "nmake"
 in a Visual C++ command line window to build the static library
-and the usual test programs.  To verify that the colllector is
+and the usual test programs.  To verify that the collector is
 at least somewhat functional, run gctest.exe.  This should create
-gctest.exe.log after a few seconds.
+gctest.gc.log after a few seconds.
 
 This process is completely analogous to NT_STATIC_THREADS_MAKEFILE
 for the 32-bit version.
